Changed background color of divs to orange and fixed spacing of atom displays.

--- a/app/style.css
+++ b/app/style.css
@@ -72,7 +72,7 @@ canvas {
     position: absolute;
 }
 
-button {
+button, div {
     background-color: #ECE389;
 }
 
@@ -96,6 +96,7 @@ button {
     right: 11em;
     color: red;
     font-size: 1.4em;
+    background-color: #FCF9F0;
 }
 
 /* Header */
@@ -125,17 +126,17 @@ h2 {
     position: absolute;
     right: 1em;
     top: 1em;
-    background-color: white;
 }
 
 .atom-display {
-    line-height: 0.5em;
-    padding: 0 10px;
+    line-height: 1.6em;
+    padding: 10px;
     border: 1px solid black;
 }
 
 .atom-display h3 {
     text-align: center;
+    font-weight: bold;
 }
 
 .hidden {
@@ -180,11 +181,10 @@ h2 {
 #shortcuts {
     position: absolute;
     top: 50%;
-    margin-top: -160px;
+    margin-top: -100px;
     left: 50%;
-    margin-left: -80px;
+    margin-left: -100px;
     border: 1px solid black;
-    background-color: white;
 }
 
 #shortcuts h3 {
